<resources>
    <string name="app_name">Realistic Life Simulator</string>
    <string name="sort_name">Name</string>
    <string name="sort_recent">Recent</string>
    <string name="sort_percentage">Percentage</string>
    <string-array name="scenario_sort">
        <item>@string/sort_name</item>
        <item>@string/sort_recent</item>
        <item>@string/sort_percentage</item>
    </string-array>
    <string name="scene_null_error">Scene was not found!</string>
    <string name="scene_null_error_text">Scene was not found where this answer leads to. Check that
    your answer leads to a correct scene in this scenario.</string>
    <string name="completed_scenario">Completed scenario:\u0020\n</string>
    <string name="completed_percentage">Completed percentage:\u0020</string>
    <string name="completed_50">Oh snap, it did not go so well this time.
        Try again with better luck and weigh your answers thoroughly.</string>
    <string name="completed_75">You are close to success, but you still need some practising. Did
        you forget something essential?</string>
    <string name="completed_90">Great! You performed quite well on this scenario, but there is still
        some room for improvement.</string>
    <string name="completed_99">Great, you are very close to success.</string>
    <string name="completed_100">Awesome!</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="my_tasks">My Tasks</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="createScenario">Create scenario</string>
    <string name="scenarios">My created scenarios</string>
    <string name="addCategory">Add</string>
    <string name="renameCategory">Rename</string>
    <string name="deleteButton">Delete</string>
    <string name="playButton">Practise</string>
    <string name="modifyButton">Modify</string>
    <string name="resetButton">Reset</string>
    <string name="newCategory">New category</string>
    <string name="backButton">Close</string>
    <string name="categoryExists">Category already exists!</string>
    <string name="defaultCategoryPremade">You can only move your own crated scenarios in to this
    category!</string>
    <string name="scenarioReset">Reset</string>
    <string name="scenarioDelete">Delete</string>
    <string name="scenarioCancel">Cancel</string>
    <string name="scenarioResetText">Percentage will be reset back to 0\%. Are you sure you want
        to do this?</string>
    <string name="scenarioDeleteText">Scenario will be deleted permanently. Are you sure you want
        to do this?</string>
    <string name="modifiableDeleteText">Are you sure you want to delete this permanently?</string>
    <string name="duplicateScenarioWarning">Duplicate scenario found!</string>
    <string name="duplicateScenarioWarningText">Update added new scenarios and one of the scenarios
    has the same name as your own created scenario \"%1$s\". Rename your created scenario to something
    else, otherwise it will not work correctly.</string>
    <string name="duplicateScenarioRename">Rename</string>
    <string name="duplicateScenarioLater">Later</string>
    <string name="alertTopic">Alert!</string>
    <string name="alertMessage">Are you sure?</string>
    <string name="alertPositiveButton">Ok</string>
    <string name="alertNegativeButton">Cancel</string>
    <string name="font_title">Font</string>
    <string name="font_color">Color</string>
    <string name="font_size">Size</string>
    <string name="audio_title">Audio</string>
    <string name="audio_music">Music</string>
    <string name="audio_sound">Sound</string>
    <string name="language_title">Language</string>
    <string name="font_small">Small</string>
    <string name="font_normal">Normal</string>
    <string name="font_large">Large</string>
    <string-array name="font_sizes">
        <item>@string/font_small</item>
        <item>@string/font_normal</item>
        <item>@string/font_large</item>
    </string-array>
    <string name="font_black">Black</string>
    <string name="font_red">Red</string>
    <string name="font_green">Green</string>
    <string name="font_blue">Blue</string>
    <string-array name="font_colors">
        <item>@string/font_black</item>
        <item>@string/font_red</item>
        <item>@string/font_green</item>
        <item>@string/font_blue</item>
    </string-array>
    <string name="import_file">&import_file;</string>
    <string name="export_file">&export_file;</string>
    <string name="create_scene">&create_scene;</string>
    <string name="scenario_name_give">Scenario name:</string>
    <string name="add">&add;</string>
    <string name="done">&done;</string>
    <string name="first_scene_information">The name of the first scene must be: first</string>
    <string name="scene_name_give">Scene name:</string>
    <string name="scene_question">Scene question:</string>
    <string name="disabled_scene_name">You can\'t rename the first scene!</string>
    <string name="choose_background">Background:</string>
    <string name="choose_person">Person:</string>
    <string name="choose_face">Face:</string>
    <string name="choose_fore">Items:</string>
    <string name="empty_image">Empty</string>
    <string name="create_answer">&create_answer;</string>
    <string name="choose_color">Choose color:</string>
    <string name="write_answer">Write answer:</string>
    <string name="info_next_scene">Select where does this answer lead to:</string>
    <string name="back_button">Cancel</string>
    <string name="give_all_data">Give all required data!</string>
    <string name="duplicate_answer">Answer already exists, change the text!</string>
    <string name="import_done">Importing done</string>
    <string name="is_all_data_given">Ensure that you have given all the data</string>
    <string name="file_saved">File saved</string>
    <string name="send_scenario">Send scenario</string>
    <string name="give_new_scenario_name">Give name for the scenario you are about import:</string>
    <string name="huom">Note!</string>
    <string name="file_types">Pick only files with .json extension.</string>
    <string name="name_file">Name: </string>
    <string name="go"> Goes: </string>
    <string name="color_set"> Color: </string>
    <string name="duplicate_warning">This name is already used!</string>
    <string name="not_added">Not added</string>
    <string name="remove_item">Do you really want remove this?</string>
    <string name="can_delete_scene">You can delete scenes by holding the scene button</string>
    <string name="can_delete_answer">You can delete answers by holding the answer button</string>
    <string name="saved_scenario">Scenario saved</string>
    <string name="not_enough_scene">At least one scene is needed</string>
    <string name="remember_name">You must give a name to the scene.</string>
    <string name="remember_question">You must give a question to the scene.</string>
    <string name="remember_answers">You must create at least one answer.</string>
    <string name="unique_name">Give unique name</string>
    <string name="need_first">Scene named \"first\" is needed</string>
    <string name="too_many_first">Only one scene can be named as \"first\"</string>
    <string name="remember_one_answer">Must give answer</string>
    <string name="default_answer">Default answer</string>
    <string name="not_number">Do not use numbers!</string>
    <string name="or">or</string>
    <string name="not_null">You can not give null</string>
    <string name="scene_name_empty">You must give a name to the scene!</string>
    <string name="duplicate_scene_name">You have already created scene named \"%1$s\"! Please rename
        your scene.</string>
    <string name="null_value">end</string>
    <string name="autosave_not">Name is needed for the auto save to function correctly.</string>
    <string name="duplicate_modifiable">Duplicate</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="moved_to">Moved to position %1$d / %2$d</string>
    <string name="copy">-copy</string>
    <string name="tutorial_scenario">
    &lt;h1&gt;Creating a scenario&lt;/h1&gt;
    &lt;p&gt;1. Give a name to your scenario (name must be unique)&lt;/p&gt;
    &lt;p&gt;2. Press the \"&create_scene;\"-button to add scenes to your scenario&lt;/p&gt;
    &lt;p&gt;3. When the scenario is ready, press the \"&add;\"-button&lt;/p&gt;
    &lt;h2&gt;&export_file;&lt;/h2&gt;
    &lt;p&gt;You can export the scenario you have created as a json-file by pressing the \"&export_file;\"-button
        and by selecting where to export the scenario. This way, you can easily save your scenarios
        to wherever you want and share them with, for example, your friends.&lt;/p&gt;
    &lt;h2&gt;&import_file;&lt;/h2&gt;
    &lt;p&gt;It is also possible to import json-scenario files into your
        app. Just press the \"&import_file;\"-button and select the file to import.&lt;/p&gt;
    &lt;h2&gt;Deleting, moving and duplicating scenes&lt;/h2&gt;
    &lt;p&gt;If you want to delete, move or duplicate created scenes, just hold the created scene button.&lt;/p&gt;
    &lt;p&gt;&lt;b&gt;Note:&lt;/b&gt; You should always export the scenarios you have created to some external place.
    If you delete and reinstall this app, all of the scenarios you have created will otherwise be lost.
    It\'s very advisable to keep a backup of your scenarios in your phone\'s memory or in some cloud
    service.&lt;/p&gt;
    &lt;p&gt;You can also create and modify scenarios with your computer in a web browser:
        &lt;a href="https://resluontityokalu.web.app"&gt;https://resluontityokalu.web.app&lt;/a&gt; &lt;/p&gt;</string>
    <string name="tutorial_scene">
    &lt;h1&gt;Creating a scene&lt;/h1&gt;
    &lt;p&gt;1. Select a desired image for the scene&lt;/p&gt;
    &lt;p&gt;2. Give a name to your scene (the name must be unique and first scene must be named "first")&lt;/p&gt;
    &lt;p&gt;3. Write a question to your scene&lt;/p&gt;
    &lt;p&gt;4. Create at least one answer to your scene by clicking the \"&create_answer;\"-button&lt;/p&gt;
    &lt;p&gt;5. When the scene is ready, press the \"&done;\"-button&lt;/p&gt;
    &lt;h2&gt;Deleting, moving and duplicating an answer&lt;/h2&gt;
    &lt;p&gt;If you want to delete, move or duplicate the answers you have created, just hold the created
        answer button.&lt;/p&gt;</string>
    <string name="tutorial_answer">
    &lt;h1&gt;Creating an answer&lt;/h1&gt;
    &lt;p&gt;1. Select a color to your answer&lt;/p&gt;
    &lt;p&gt;2. Write an answer&lt;/p&gt;
    &lt;p&gt;3. Select which scene does this answer lead to&lt;/p&gt;
    &lt;p&gt;4. When the answer is ready, press the \"&done;\"-button&lt;/p&gt;
    &lt;p&gt;Meaning of colors: Green is the desired answer, yellow is almost right and red is not so good
        answer.&lt;/p&gt;
    &lt;h2&gt;Note:&lt;/h2&gt;
    &lt;p&gt;If you delete or rename scenes where answers of some other scenes lead, those answers do not
        work correctly anymore. Remember to change those answers so that they lead either to a new
        scene or to the renamed scene.&lt;/p&gt;</string>
</resources>