<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".SettingsActivity">

    <TextView
        style="@style/SettingsTitles"
        android:text="@string/settings"
        android:textSize="55dp" />

    <TextView
        style="@style/SettingsTitles"
        android:text="@string/font_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/SettingsTopics"
            android:text="@string/font_size" />

        <Spinner
            style="@style/SettingsSpinners"
            android:id="@+id/fontSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/SettingsTopics"
            android:text="@string/font_color" />

        <Spinner
            style="@style/SettingsSpinners"
            android:id="@+id/fontColor" />

    </LinearLayout>

    <TextView
        style="@style/SettingsTitles"
        android:text="@string/audio_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/SettingsTopics"
            android:text="@string/audio_music" />

        <SeekBar
            style="@style/SettingsSeekbars"
            android:id="@+id/musicBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/SettingsTopics"
            android:text="@string/audio_sound" />

        <SeekBar
            style="@style/SettingsSeekbars"
            android:id="@+id/soundBar" />

    </LinearLayout>

</LinearLayout>