<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#DDD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newCategory"
                style="@style/EditText"
                android:hint="@string/newCategory" />

            <Button
                android:id="@+id/addCategory"
                style="@style/EditTextConfirmButton"
                android:text="@string/addCategory" />
        </LinearLayout>

        <Button
            android:id="@+id/createScenario"
            style="@style/HamburgerButton"
            android:text="@string/createScenario" />

        <Button
            android:id="@+id/settings"
            style="@style/HamburgerButton"
            android:text="@string/settings" />

        <Button
            android:id="@+id/back"
            style="@style/HamburgerButton"
            android:text="@string/backButton"
            android:background="@drawable/cancel_button"/>
    </LinearLayout>
</RelativeLayout>