<?xml version="1.0" encoding="utf-8"?>
<!-- Add inside RelativeLayout to make it wider -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/dialogBackground">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="?attr/font_large"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/playButton"
                style="@style/HamburgerButton"
                android:text="@string/playButton"
                android:background="@drawable/confirm_button"/>

            <Button
                android:id="@+id/resetButton"
                style="@style/HamburgerButton"
                android:text="@string/resetButton" />

            <Button
                android:id="@+id/modifyButton"
                style="@style/HamburgerButton"
                android:text="@string/modifyButton" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/HamburgerButton"
                android:text="@string/deleteButton" />

            <Button
                android:id="@+id/closeButton"
                style="@style/HamburgerButton"
                android:text="@string/backButton"
                android:background="@drawable/cancel_button"/>
        </LinearLayout>
</RelativeLayout>